# Task-Manager

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml
app/: container.py  main.py  providers.py
app/api/: router.py
app/config/: database.py  settings.py
app/models/: base.py  task.py
app/repositories/: base.py  task.py
app/schemas/: base.py  pagination.py  task.py
app/services/: task.py
migrations/: env.py
migrations/versions/: 2025_08_19_initial_migration.py  2025_08_21_initial_migration.py  2025_08_21_setup_name_field_to_unique.py
tests/: conftest.py  test_app.py  test_end_to_end.py  test_schemas.py
